--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 0, 0, 0;
+    /*--foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;*/
+    height: 100%;
+    background: #050301;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,11 +18,13 @@
     }
 }
 
+#__next{
+    height: 100%
+}
+
 body {
+    margin: 0;
     color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-    ) rgb(var(--background-start-rgb));
+    height: 100%;
+    background: #050301;
 }
