--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,46 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-    /*--foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;*/
-    height: 100%;
-    background: #050301;
+    --background: #000000;
+    --foreground: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
-}
-
-#__next {
-    height: 100%
-}
-
-:root::-webkit-scrollbar {
-    display: none;  /* Safari and Chrome */
+html,
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    margin: 0;
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-    margin: 0;
+    color: var(--foreground);
+    background: var(--background);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+    box-sizing: border-box;
     padding: 0;
-    color: rgb(var(--foreground-rgb));
-    height: 100%;
-    background: #050301;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    margin: 0;
 }
 
-.widget {
-    display: -webkit-flex;
-    -webkit-flex-wrap: wrap;
-    -webkit-flex-grow: 1;
-    -webkit-align-items: stretch;
-    margin: 1rem;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
+@media (prefers-color-scheme: dark) {
+    html {
+        color-scheme: dark;
+    }
+}
